# ai-agents

./: .gitignore  README.md  pyproject.toml
1-basic-agent/greeting_agent/: .env.example  agent.py
2-tool-agent/: README.md
2-tool-agent/tool_agent/: agent.py
3-structured-output/: README.md
3-structured-output/email_agent/: agent.py
4-sessions-and-state/: in_memory_session.py
4-sessions-and-state/qna_agent/: agent.py
5-persistent-storage/: main.py  my_agent_data.db
5-persistent-storage/reminder_agent/: agent.py  reminder.py
6-mcp-agent/: .env.example
6-mcp-agent/mcp_servers/sqlite/: __init__.py  db.py  server.py  utils.py
6-mcp-agent/notion_agent/: agent.py  prompt.md
6-mcp-agent/sqlite_agent/: agent.py  prompt.md
7-a2a-agent/: README.md  utils.py
7-a2a-agent/simple_a2a_agent/: agent.py  server.py
